--- a/fluxcd/kustomizations.yaml
+++ b/fluxcd/kustomizations.yaml
@@ -1,14 +1,3 @@
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: GitRepository
-metadata:
-  name: homelab-repository
-  namespace: flux-system
-spec:
-  interval: 1m
-  ref:
-    branch: flux
-  url: https://git.mvaldes.dev/mvaldes/k8s-apps
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -36,6 +25,10 @@ spec:
   path: "./atlantis"
   prune: true
   timeout: 1m
+  decryption:
+      provider: sops
+      secretRef:
+        name: sops-age 
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
@@ -54,13 +47,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: wiki-flux 
+  name: cloudflared-flux 
   namespace: flux-system
 spec:
   interval: 10m
   sourceRef:
     kind: GitRepository
     name: homelab-repository 
-  path: "./wikijs"
+  path: "./cloudflared"
   prune: true
   timeout: 1m
