--- a/cloudflared/cloudflared.yaml
+++ b/cloudflared/cloudflared.yaml
@@ -44,7 +44,9 @@ spec:
       volumes:
         - name: creds
           secret:
-            secretName: tunnel-credentials
+            secretName: cloudflared-secrets
+            items:
+              - key: tunnel.json
         - name: config
           configMap:
             name: cloudflared
@@ -53,26 +55,6 @@ spec:
                 path: config.yaml
         - name: cert
           secret:
-            secretName: tunnel-cert
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: cloudflared
-  namespace: cloudflared
-data:
-  config.yaml: |-
-    tunnel: daf39100-197b-4d41-9bfd-a0b28e309d03
-    credentials-file: /etc/cloudflared/creds/tunnel.json
-    metrics: 0.0.0.0:2000
-    no-autoupdate: true
-    ingress:
-    - hostname: k8s.mvaldes.dev
-      service: http://nginx-service.default:80
-    - hostname: atlantis.mvaldes.dev
-      service: http://atlantis-atlantis-release.atlantis:80
-    - hostname: wiki.mvaldes.dev
-      service: http://wiki-wiki-release.wiki:80
-    - hostname: uptime.mvaldes.dev
-      service: http://uptime-uptime-release-uptime-kuma.uptime:80
-    - service: http_status:404
+            secretName: cloudflared-secrets 
+            items:
+              - key: cert.pem
