--- a/fluxcd/kustomizations.yaml
+++ b/fluxcd/kustomizations.yaml
@@ -57,3 +57,7 @@ spec:
   path: "./cloudflared"
   prune: true
   timeout: 1m
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
