--- a/prometheus/configmap.yaml
+++ b/prometheus/configmap.yaml
@@ -47,6 +47,7 @@ data:
           - ReadWriteOnce
         mountPath: /data
         size: 8Gi
+        storageClass: nfs-k8s
       replicaCount: 1
       tcpSocketProbeEnabled: false
       probeScheme: HTTP
