--- a/shlink/shlink.yaml
+++ b/shlink/shlink.yaml
@@ -33,7 +33,7 @@ spec:
         - name: DEFAULT_DOMAIN
           value: links.mvaldes.dev
         - name: SHELL_VERBOSITY 
-          value: 3
+          value: "3"
         - name: DB_DRIVER
           value: postgres
         - name: DB_NAME
