--- a/shlink/shlink.yaml
+++ b/shlink/shlink.yaml
@@ -41,7 +41,7 @@ spec:
         - name: DB_USER
           value: postgres
         - name: DB_HOST 
-          value: db.wjfvumsnjpzqnlnqglzm.supabase.co
+          value: postgres-svc.db
         - name: GEOLITE_LICENSE_KEY
           valueFrom:
             secretKeyRef:
