--- a/arrs/radarr/kustomization.yaml
+++ b/arrs/radarr/kustomization.yaml
@@ -25,5 +25,8 @@ patches:
       - op: replace
         path: /spec/ports/0/name
         value: radarr-port
+      - op: replace
+        path: /spec/selector/app
+        value: radarr 
     target:
       kind: Service 
