--- a/traefik/traefik-config.yml
+++ b/traefik/traefik-config.yml
@@ -7,6 +7,7 @@ spec:
   valuesContent: |-
     dashboard:
       enabled: true
+      insecure: true
     ports:
       http:
         exposedPort: 8888 
