--- a/arrs/bazarr/patch.yaml
+++ b/arrs/bazarr/patch.yaml
@@ -18,8 +18,29 @@ spec:
         ports:
         - containerPort: 6767
           name: http
+        volumeMounts:
+        - name: movies 
+          mountPath: /movies
+        - name: shows 
+          mountPath: /shows
+        - name: anime 
+          mountPath: /anime
+        - name: downloads
+          mountPath: /downloads
       volumes:
       - name: config
         persistentVolumeClaim:
           claimName: bazarr-pvc
+      - name: movies 
+        hostPath:
+          path: /mnt/nas/Movies
+      - name: shows 
+        hostPath:
+          path: /mnt/nas/Series
+      - name: anime 
+        hostPath:
+          path: /mnt/nas/Anime
+      - name: downloads 
+        hostPath:
+          path: /mnt/downloads
 ---
