adding windmill encrypted secret

--- a/fluxcd/kustomizations.yaml
+++ b/fluxcd/kustomizations.yaml
@@ -191,3 +191,7 @@ spec:
   path: "./windmill"
   prune: true
   timeout: 1m
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
