--- a/fluxcd/kustomizations.yaml
+++ b/fluxcd/kustomizations.yaml
@@ -195,3 +195,22 @@ spec:
     provider: sops
     secretRef:
       name: sops-age
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: bots-flux 
+  namespace: flux-system
+spec:
+  interval: 10m
+  sourceRef:
+    kind: GitRepository
+    name: homelab-repository
+  path: "./bots"
+  prune: true
+  timeout: 1m
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+
