updating cluster name for elastic and kibana

--- a/elastic/elastic-cm.yaml
+++ b/elastic/elastic-cm.yaml
@@ -7,7 +7,7 @@ metadata:
 data:
   values.yaml: |
     clusterName: "homelab"
-    nodeGroup: "master"
+    nodeGroup: "nodes"
 
     # The service that non master groups will try to connect to when joining the cluster
     # This should be set to clusterName + "-" + nodeGroup for your master group
