fixing service for master nodes discovery

--- a/elastic/elastic-cm.yaml
+++ b/elastic/elastic-cm.yaml
@@ -11,7 +11,7 @@ data:
 
     # The service that non master groups will try to connect to when joining the cluster
     # This should be set to clusterName + "-" + nodeGroup for your master group
-    masterService: ""
+    masterService: "homelab-nodes-headless"
 
     # Elasticsearch roles that will be applied to this nodeGroup
     # These will be set as environment variables. E.g. node.roles=master
