updating names for discovery

--- a/elastic/elastic-cm.yaml
+++ b/elastic/elastic-cm.yaml
@@ -6,12 +6,12 @@ metadata:
   namespace: elastic 
 data:
   values.yaml: |
-    clusterName: "homelab"
-    nodeGroup: "nodes"
+    clusterName: "elasticsearch"
+    nodeGroup: "master"
 
     # The service that non master groups will try to connect to when joining the cluster
     # This should be set to clusterName + "-" + nodeGroup for your master group
-    masterService: "homelab-nodes"
+    masterService: ""
 
     # Elasticsearch roles that will be applied to this nodeGroup
     # These will be set as environment variables. E.g. node.roles=master
