adding kibana to cloudflared

--- a/cloudflared/configmap.yaml
+++ b/cloudflared/configmap.yaml
@@ -20,4 +20,6 @@ data:
       service: http://shlink-svc-api.shlink:80
     - hostname: windmill.mvaldes.dev
       service: http://windmill-app.windmill:8000
+    - hostname: kibana.mvaldes.dev
+      service: http://elastic-kibana-release-kibana.elastic:5601
     - service: http_status:404
