--- a/elastic/elastic.yaml
+++ b/elastic/elastic.yaml
@@ -1,33 +1,26 @@
-apiVersion: v1
-kind: Namespace
+apiVersion: elasticsearch.k8s.elastic.co/v1
+kind: Elasticsearch
 metadata:
-  name: elastic
----
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmRepository
-metadata:
-  name: elastic-helm
-  namespace: elastic 
+  name: homelab 
+  namespace: elastic
 spec:
-  interval: 1m0s
-  url: https://helm.elastic.co
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: elastic-release 
-  namespace: elastic 
-spec:
-  targetNamespace: elastic 
-  chart:
-    spec:
-      chart: elasticsearch
-      reconcileStrategy: ChartVersion
-      sourceRef:
-        kind: HelmRepository
-        name: elastic-helm
-      version: 8.5.1
-  interval: 1m0s
-  valuesFrom:
-    - kind: ConfigMap
-      name: elastic-cm 
+  version: 8.12.0
+  nodeSets:
+  - name: elastic 
+    count: 4
+    volumeClaimDeletePolicy: DeleteOnScaledownOnly
+    volumeClaimTemplates:
+    - metadata:
+        name: elasticsearch-data
+      spec:
+        accessModes:
+        - ReadWriteOnce
+        resources:
+          requests:
+            storage: 3Gi
+          storageClassName: nfs-k8s-keep
+    config:
+      node.store.allow_mmap: false
+      node.roles: ["master", "data", "ingest", "transform"]
+      xpack.ml.enabled: false
+
