--- a/kibana/kibana.yaml
+++ b/kibana/kibana.yaml
@@ -2,7 +2,7 @@ apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
   name: kibana
-  namespace: kibana
+  namespace: elastic 
 spec:
   version: 8.12.0
   count: 1
