--- a/fluxcd/kustomizations.yaml
+++ b/fluxcd/kustomizations.yaml
@@ -227,3 +227,7 @@ spec:
   path: "./grafana"
   prune: true
   timeout: 1m
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
