--- a/grafana/secrets.yaml
+++ b/grafana/secrets.yaml
@@ -7,7 +7,7 @@ metadata:
 type: Opaque
 data:
     admin-user: ENC[AES256_GCM,data:SLPtaiBWDnw=,iv:pdPvEy1BUW6NBerBMIp2VsembZAhjOpihMpXfkxYy3A=,tag:rBPbZDLIwe+0zuUH00vjdQ==,type:str]
-    passwordKey: ENC[AES256_GCM,data:o2SuM0GmBH9m+TvW7zASyQ==,iv:0iY69oSnr637izbxRwRdSuZCr73Igqdm/26AANwhhAM=,tag:Pf8GuhGeEHVb+1fiCt8BGQ==,type:str]
+    admin-password: ENC[AES256_GCM,data:o2SuM0GmBH9m+TvW7zASyQ==,iv:0iY69oSnr637izbxRwRdSuZCr73Igqdm/26AANwhhAM=,tag:Pf8GuhGeEHVb+1fiCt8BGQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
