--- a/cloudflared/configmap.yaml
+++ b/cloudflared/configmap.yaml
@@ -21,5 +21,5 @@ data:
     - hostname: windmill.mvaldes.dev
       service: http://windmill-app.windmill:8000
     - hostname: kibana.mvaldes.dev
-      service: http://elastic-kibana-release-kibana.elastic:5601
+      service: http://kibana-kb-http.elastic:5601
     - service: http_status:404
