--- a/fluxcd/kustomizations.yaml
+++ b/fluxcd/kustomizations.yaml
@@ -178,23 +178,23 @@ spec:
   prune: true
   timeout: 1m
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: windmill-flux
-  namespace: flux-system
-spec:
-  interval: 10m
-  sourceRef:
-    kind: GitRepository
-    name: homelab-repository
-  path: "./windmill"
-  prune: true
-  timeout: 1m
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-age
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: windmill-flux
+#   namespace: flux-system
+# spec:
+#   interval: 10m
+#   sourceRef:
+#     kind: GitRepository
+#     name: homelab-repository
+#   path: "./windmill"
+#   prune: true
+#   timeout: 1m
+#   decryption:
+#     provider: sops
+#     secretRef:
+#       name: sops-age
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
