--- a/grafana/loki.yaml
+++ b/grafana/loki.yaml
@@ -14,6 +14,9 @@ spec:
         name: grafana-helm
       version: 5.42.0
   interval: 1m0s
+  valuesFrom:
+    - kind: ConfigMap
+      name: loki-cm 
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
