--- a/cloudflared/configmap.yaml
+++ b/cloudflared/configmap.yaml
@@ -20,6 +20,8 @@ data:
       service: http://shlink-svc-api.shlink:80
     - hostname: windmill.mvaldes.dev
       service: http://windmill-app.windmill:8000
+    - hostname: grafana.mvaldes.dev
+      service: http://grafana-grafana-release.grafana
     - hostname: kibana.mvaldes.dev
       service: https://kibana-kb-http.elastic:5601
       originRequest:
