--- a/arrs/base/ingress.yaml
+++ b/arrs/base/ingress.yaml
@@ -8,7 +8,7 @@ spec:
     - web 
   routes:
     - kind: Rule
-      match: Host(`heus.local.net`)
+      match: Host(`arr.local.net`)
       services:
-        - name: prometheus-prometheus-release-server
+        - name: arr.local.net 
           port: 80
