moving arr configs to native drives on nodes for all apps

--- a/arrs/base/deployment.yaml
+++ b/arrs/base/deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: arr
     spec:
+      nodeName: azero
       containers:
       - name: arr-pod
         imagePullPolicy: IfNotPresent
