--- a/arrs/sonarr/patch.yaml
+++ b/arrs/sonarr/patch.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         app: sonarr
     spec:
+      hostNetwork: true
       containers:
       - name:  arr-pod
         image: linuxserver/sonarr
