--- a/arrs/base/deployment.yaml
+++ b/arrs/base/deployment.yaml
@@ -14,6 +14,7 @@ spec:
         app: arr
     spec:
       nodeName: azero
+      hostNetwork: true
       containers:
       - name: arr-pod
         imagePullPolicy: IfNotPresent
