--- a/loki/promtail.yaml
+++ b/loki/promtail.yaml
@@ -1,21 +1,21 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: loki-release 
+  name: promtail-release 
   namespace: logs 
 spec:
   targetNamespace: logs 
   chart:
     spec:
-      chart: loki 
+      chart: promtail 
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
         name: grafana-helm
         namespace: grafana
-      version: 5.42.0
+      version: 6.15.4
   interval: 1m0s
   valuesFrom:
     - kind: ConfigMap
-      name: loki-cm 
----
+      name: promtail-cm 
+
