grafana plugin not working

--- a/grafana/grafana-cm.yaml
+++ b/grafana/grafana-cm.yaml
@@ -26,4 +26,4 @@ data:
     # extra plugins to install
     plugins:
     - github
-    - marcusolsson-json-datasource
+    #- marcusolsson-json-datasource
