--- a/grafana/grafana-cm.yaml
+++ b/grafana/grafana-cm.yaml
@@ -22,3 +22,8 @@ data:
       existingSecret: "grafana-secret"
       userKey: admin-user
       passwordKey: admin-password
+
+    # extra plugins to install
+    plugins:
+    - grafana-github-datasource
+    - marcusolsson-json-datasource
