--- a/elk/agent.yaml
+++ b/elk/agent.yaml
@@ -43,14 +43,23 @@ spec:
     podTemplate:
       spec:
         serviceAccountName: elastic-agent
-        hostNetwork: true
-        dnsPolicy: ClusterFirstWithHostNet
         automountServiceAccountToken: true
         securityContext:
           runAsUser: 0
+        volumeMounts:
+          - name: container-logs
+            mountPath: /var/lib/containers
+          - name: system-logs
+            mountPath: /var/log/
         volumes:
         - name: agent-data
           emptyDir: {}
+        - name: container-logs
+          hostPath:
+            path: /var/log/containers
+        - name: system-logs
+          hostPath:
+            path: /var/log/
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
