--- a/loki/loki.yaml
+++ b/loki/loki.yaml
@@ -1,13 +1,18 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: loki
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: loki-release 
-  namespace: logs 
+  namespace: loki
 spec:
-  targetNamespace: logs 
+  targetNamespace: loki 
   chart:
     spec:
-      chart: loki 
+      chart: loki
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
