--- a/loki/promtail.yaml
+++ b/loki/promtail.yaml
@@ -2,9 +2,9 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: promtail-release 
-  namespace: logs 
+  namespace: loki 
 spec:
-  targetNamespace: logs 
+  targetNamespace: loki 
   chart:
     spec:
       chart: promtail 
