--- a/loki/loki-cm.yaml
+++ b/loki/loki-cm.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: loki-cm 
-  namespace: grafana 
+  namespace: loki 
 data:
   values.yaml: |
     loki:
