--- a/loki/loki-cm.yaml
+++ b/loki/loki-cm.yaml
@@ -5,36 +5,38 @@ metadata:
   namespace: loki 
 data:
   values.yaml: |
+    test_pod:
+      enabled: true
+      image: bats/bats:1.8.2
+      pullPolicy: IfNotPresent
+
     loki:
-      auth_enabled: false 
-    monitoring:
-      lokiCanary:
+      enabled: true
+      isDefault: true
+      url: http://{{(include "loki.serviceName" .)}}:{{ .Values.loki.service.port }}
+      persistence:
         enabled: true
-        replicas: 1
-    write:
-      replicas: 1
-      persistence:
-        volumeClaimsEnabled: true
-        enableStatefulSetAutoDeletePVC: false
+        storageClassName: nfs-k8s-keep
         size: 5Gi
-        storageClass: nfs-k8s-keep 
-    read:
-      replicas: 1
-      persistence:
-        volumeClaimsEnabled: true
-        enableStatefulSetAutoDeletePVC: true
-        size: 5Gi
-        storageClass: nfs-k8s-keep 
-    backend:
-      replicas: 1
-      persistence:
-        volumeClaimsEnabled: true
-        enableStatefulSetAutoDeletePVC: true
-        size: 5Gi
-        storageClass: nfs-k8s-keep 
-    # Configuration for the single binary node(s)
-    singleBinary:
-      replicas: 0
-    gateway:
-      enabled: true 
-      replicas: 2
+      readinessProbe:
+        httpGet:
+          path: /ready
+          port: http-metrics
+        initialDelaySeconds: 45
+      livenessProbe:
+        httpGet:
+          path: /ready
+          port: http-metrics
+        initialDelaySeconds: 45
+      datasource:
+        jsonData: "{}"
+        uid: ""
+
+
+    promtail:
+      enabled: true
+      config:
+        logLevel: info
+        serverPort: 3101
+        clients:
+          - url: http://{{ .Release.Name }}:3100/loki/api/v1/push
