updating prowlarr to right tag

--- a/arrs/prowlarr/patch.yaml
+++ b/arrs/prowlarr/patch.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: arr-pod
-        image: hotio/prowlarr:develop
+        image: hotio/prowlarr:release
         ports:
         - containerPort: 9696
           name: http
