--- a/fluxcd/kustomizations.yaml
+++ b/fluxcd/kustomizations.yaml
@@ -259,3 +259,21 @@ spec:
   path: "./elk"
   prune: true
   timeout: 1m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cronjob-flux
+  namespace: flux-system
+spec:
+  interval: 10m
+  sourceRef:
+    kind: GitRepository
+    name: homelab-repository
+  path: "./cronjobs"
+  prune: true
+  timeout: 1m
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
