--- a/cronjobs/meal-notifier.yaml
+++ b/cronjobs/meal-notifier.yaml
@@ -3,7 +3,7 @@ kind: Namespace
 metadata:
   name: cronjobs
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: meal-notifier 
