fix: missing name value

--- a/umami/deployment.yaml
+++ b/umami/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: umami
     spec:
       containers:
-        - name:
+        - name: umami-pod
           image: ghcr.io/umami-software/umami:postgresql-latest
           imagePullPolicy: IfNotPresent
           env:
