--- a/fluxcd/kustomizations.yaml
+++ b/fluxcd/kustomizations.yaml
@@ -295,3 +295,17 @@ spec:
     provider: sops
     secretRef:
       name: sops-age
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: ollama-flux
+  namespace: ollama-system
+spec:
+  interval: 10m
+  sourceRef:
+    kind: GitRepository
+    name: homelab-repository
+  path: "./ollama"
+  prune: true
+  timeout: 1m
