feat: reverting the nfs volume for prometheus

--- a/prometheus/configmap.yaml
+++ b/prometheus/configmap.yaml
@@ -47,7 +47,7 @@ data:
           - ReadWriteOnce
         mountPath: /data
         size: 8Gi
-        storageClass: nfs-k8s-keep
+        storageClass: nfs-k8s
       replicaCount: 1
       tcpSocketProbeEnabled: false
       probeScheme: HTTP
